# PiL-lvl-panel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions_8mb.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.16mb  sdkconfig.defaults.8mb  sdkconfig.defaults.common
.github/workflows/: build-8mb.yml
components/angelscript/: CMakeLists.txt
components/angelscript/source/: as_atomic.cpp
docs/: API_OVERVIEW.md  ARCHITECTURE.md  BUILD_AND_FLASH.md  CONTRIBUTING_NOTES.md  DIAGNOSTICS.md  FACTORY_DEMO_QUICK_START.md  MULTI_BOARD_TARGETS.md  RELEASE_BASELINE.md  RUNTIME_LIFECYCLE.md  USER_GUIDE.md  VALIDATION_CHECKLIST.md  pilab_panel_single_file_demo.html
examples/factory_demo/: README.md  hmi_layout.json  hmi_script.as  hmi_tags.json
main/: CMakeLists.txt  app_main.c  idf_component.yml  pilab_panel_version.h
main/app/: app_state.c  app_state.h  app_tasks.c  app_tasks.h
main/board/: README.md  pilab_board.c  pilab_board.h
main/board/waveshare_s3_7inch/: ch422g.c  ch422g.h  waveshare_s3_7inch_backlight.c  waveshare_s3_7inch_backlight.h  waveshare_s3_7inch_board.c  waveshare_s3_7inch_board.h  waveshare_s3_7inch_config.h  waveshare_s3_7inch_lcd.c  waveshare_s3_7inch_lcd.h  waveshare_s3_7inch_state.c  waveshare_s3_7inch_state.h  waveshare_s3_7inch_touch_gt911.c  waveshare_s3_7inch_touch_gt911.h
main/hmi/: hmi_diag_log.h  hmi_layout_store.c  hmi_layout_store.h  hmi_lvgl_runtime.c  hmi_lvgl_runtime.h  hmi_memory_diag.c  hmi_memory_diag.h  hmi_script_engine.cpp  hmi_script_engine.h  hmi_tag_db.c  hmi_tag_db.h
main/mqtt/: panel_mqtt.c  panel_mqtt.h
main/panel/: panel_storage.c  panel_storage.h  panel_wifi.c  panel_wifi.h
main/ui/: ui_demo.c  ui_demo.h
main/web/: panel_web_assets.c  panel_web_assets.h  panel_web_server.c  panel_web_server.h
panel_web/: index.html  package-lock.json  package.json  vite.config.js
panel_web/src/: App.vue  main.js  style.css
panel_web/src/api/: deviceApi.js  hmiApi.js  http.js  mqttApi.js  scriptApi.js  tagApi.js  wifiApi.js
panel_web/src/components/widgets/: ButtonWidget.vue  GaugeWidget.vue  LabelWidget.vue  LedWidget.vue  ReadoutWidget.vue  SetpointWidget.vue  TankWidget.vue  ToggleWidget.vue  WidgetPreview.vue
panel_web/src/editor/: angelscriptCompletions.js  prismAngelscript.js
panel_web/src/pages/: DesignerPage.vue  DevicePage.vue  MqttPage.vue  ScriptPage.vue  TagsPage.vue
panel_web/src/stores/: panelStore.js
panel_web/src/utils/: projectZip.js
panel_web/tools/: inline-dist.mjs
tools/: build_16mb.ps1  build_8mb.ps1  copyFirmware.ps1  copyFirmware_16mb.ps1  copyFirmware_8mb.ps1  embed_web_assets.py
web_source/pilab_reference/: HmiDesigner.vue  tagApi.js  tagStore.js
webflasher/: README.md  index.html  manifest.json  manifest_16mb.json  manifest_8mb.json
